# lex-oms-agent

./: .gitignore  LICENSE  README.md  SKILL.md  lex.toml
.cli/: README.md  changelog.md  commands.json
.cli/examples/: agent-guidelines.sh  agent-tool.sh  ast-diff.sh  ast-merge.sh  attest.sh  audit.sh  blame.sh  branch.sh  check.sh  conformance.sh  diff.sh  hash.sh  log.sh  merge.sh  parse.sh  publish.sh  repl.sh  replay.sh  run.sh  serve.sh  spec.sh  stage.sh  store-merge.sh  store.sh  tool-registry.sh  trace.sh  watch.sh
.github/workflows/: ci.yml
adapters/: python_agent.py
cli/: README.md  arena  arena.lex  arena.py  pyproject.toml  scenario_helpers.lex
docs/: arena-protocol.md
examples/: a2a_agent.lex  adversarial.lex  bad_agent.lex  chinese_wall_breach.lex  compliance.lex  continuous_enforcement.lex  demo.lex  enforcement.lex  hedging_agent.lex  isolation.lex  llm_agent.lex  portfolio_rebalancer.lex  risk_monitor.lex
loom/: finance_build_agent.sql
manifests/: trading_agent.json
scenarios/: crypto-48h-costs.json  crypto-48h-fees.json  crypto-48h.json  ep1.json  ep2-costs.json  stocks-1mo.json
src/: agent.lex  anthropic_provider.lex  llm_decide.lex  tool.lex  trail_kinds.lex  vertex_provider.lex
src/arena/: episode.lex  fills.lex  runner.lex  scenario.lex  trail_file.lex  verify.lex
tests/: test_agent.lex  test_arena.lex
tools/: README.md  gen_scenario.lex  gen_test.lex  scenario_id.lex
